refactoring of text selection

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ To change this template use Tools | Templates.
 </head>
 <body>
 
-    <!-- JSer DOM element -->
-    <div id="jser"></div>
+    <div id="jser1" class="jser-test"></div>
+    <div id="jser2" class="jser-test"></div>
+    <div id="jser3" class="jser-test"></div>
     
     <script src="node_modules/systemjs/dist/system.js"></script>
     
