--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ To change this template use Tools | Templates.
 
     <div id="jser1" class="jser-test"></div>
     <div id="jser2" class="jser-test"></div>
-    <div id="jser3" class="jser-test"></div>
+    <!--<div id="jser3" class="jser-test"></div>-->
     
     <script src="node_modules/systemjs/dist/system.js"></script>
     
