--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ To change this template use Tools | Templates.
     <div id="jser2" class="jser-test"></div>
     <!--<div id="jser3" class="jser-test"></div>-->
     
+    <script src="node_modules/es6-promise/dist/es6-promise.js"></script>
     <script src="node_modules/systemjs/dist/system.js"></script>
     
     <script>
