let's get serious

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!--
-To change this template use Tools | Templates.
--->
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,8 +6,14 @@ To change this template use Tools | Templates.
 </head>
 <body>
 
-    <div id="jser1" class="jser-test"></div>
-    <div id="jser2" class="jser-test"></div>
+    <div class="container">
+        <div class="cell">
+            <div id="jser1" class="jser-test"></div>    
+        </div>
+        <div class="cell">
+            <div id="jser2" class="jser-test"></div>        
+        </div>
+    </div>
     
     <script src="node_modules/es6-promise/dist/es6-promise.js"></script>
     <script src="node_modules/systemjs/dist/system.js"></script>
